knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Webinar_Entity_Relation__c/cisco_webex__Webex_Webinar_Entity_Relation__c.object-meta.xml
<CustomObject>
    <description>Object used as Junction Object</description>
    <label>Webex Webinar Campaign Member</label>
    <nameField>
        <label>Webex Webinar Campaign Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webex Webinar Campaign Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>