knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Webinar_Entity_Relation__c/fields/cisco_webex__Campaign_Record__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Campaign_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Webex Campaign Lookup field</description>
    <label>Campaign Record</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Webinar Campaign Memberships</relationshipLabel>
    <relationshipName>Webex_Webinar_Entity_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>