knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Webinar_Entity_Relation__c/fields/cisco_webex__Webex_Source__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Webex_Source__c</fullName>
    <label>Webex Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>