knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Webinar_Entity_Relation__c/fields/cisco_webex__WebexExternalId__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__WebexExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Field used to maintain uniqueness of the records</description>
    <externalId>true</externalId>
    <label>WebexExternalId</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>