knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Webinar_Entity_Relation__c/fields/cisco_webex__Webinar_Campaign__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Webinar_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Webex Campaign Lookup field</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Webex Webinar Campaign Members</relationshipLabel>
    <relationshipName>Webex_Webinar_Entity_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>