knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Webinar_Entity_Relation__c/listViews/cisco_webex__All.listView-meta.xml
<ListView>
    <fullName>cisco_webex__All</fullName>
    <columns>cisco_webex__Webinar_Campaign__c</columns>
    <columns>NAME</columns>
    <columns>cisco_webex__WebexExternalId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>